--- a/app/src/main/res/layout/fragment_edit_word.xml
+++ b/app/src/main/res/layout/fragment_edit_word.xml
@@ -45,6 +45,7 @@
                 android:layout_marginTop="4dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etWord"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter word"
@@ -60,6 +61,7 @@
                 android:textColor="@android:color/black" />
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilIpa"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,10 +70,13 @@
                 app:endIconMode="custom">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etIpa"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="/pronunciation/"
-                    android:text="/ɪˈfem.ər.əl/" />
+                    android:text="/ɪˈfem.ər.əl/"
+                    android:focusable="false"
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Meaning -->
@@ -89,6 +94,7 @@
                 android:layout_marginTop="4dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etMeaning"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
@@ -112,6 +118,7 @@
                 android:layout_marginTop="4dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etExample"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
