--- a/app/src/main/res/layout/fragment_add_word.xml
+++ b/app/src/main/res/layout/fragment_add_word.xml
@@ -46,6 +46,7 @@
                 android:layout_marginTop="4dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etWord"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter word" />
@@ -60,6 +61,7 @@
                 android:textColor="@android:color/black" />
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilIpa"
                 style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,9 +70,12 @@
                 app:endIconMode="custom">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etIpa"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="/pronunciation/" />
+                    android:hint="/pronunciation/"
+                    android:focusable="false"
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Meaning -->
@@ -88,6 +93,7 @@
                 android:layout_marginTop="4dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etMeaning"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
@@ -110,6 +116,7 @@
                 android:layout_marginTop="4dp">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etExample"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
@@ -178,11 +185,11 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSaveWord"
+            android:id="@+id/btnAddWord"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Save Word" />
+            android:text="Add Word" />
 
     </LinearLayout>
 
