--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -25,7 +25,7 @@
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@id/ivArrow"
+            app:layout_constraintEnd_toStartOf="@id/ivMenuPoint"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,7 +37,7 @@
             android:text="Xin chào"
             android:textColor="#757575"
             android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@id/ivArrow"
+            app:layout_constraintEnd_toStartOf="@id/ivMenuPoint"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvWord" />
 
@@ -50,7 +50,7 @@
             android:textColor="#9E9E9E"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvMeaning" />
+            app:layout_constraintTop_toBottomOf="@+id/tvMeaning" />
 
         <ImageView
             android:id="@+id/btnSpeak"
@@ -60,17 +60,19 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_speaker"
             app:tint="#5C6BC0"
-            app:layout_constraintBottom_toBottomOf="@id/tvPhonetic"
-            app:layout_constraintStart_toEndOf="@id/tvPhonetic"
-            app:layout_constraintTop_toTopOf="@id/tvPhonetic" />
-            <!-- Placeholder for speaker icon, replace with actual speaker icon later -->
+            app:layout_constraintBottom_toBottomOf="@+id/tvPhonetic"
+            app:layout_constraintStart_toEndOf="@+id/tvPhonetic"
+            app:layout_constraintTop_toTopOf="@+id/tvPhonetic" />
 
         <ImageView
-            android:id="@+id/ivArrow"
-            android:layout_width="15dp"
-            android:layout_height="16dp"
-            android:rotation="180"
+            android:id="@+id/ivMenuPoint"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:src="@drawable/ic_menu_point"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
