--- a/app/src/main/res/layout/dialog_share_module.xml
+++ b/app/src/main/res/layout/dialog_share_module.xml
@@ -105,6 +105,7 @@
             app:startIconDrawable="@drawable/ic_letter">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="example@gmail.com"
